# BiseNet-FL

./: .gitignore  Run-demo.md  pyproject.toml  requirements.txt
configs/: bisenetv2_city.py
datasets/: city_partitions.json
datasets/bdd100k/: iid_partition_p1.json  iid_partition_p3_10c.json  iid_partition_p3_30c.json  iid_partition_p3_50c.json  non_iid_partition_p1.json  non_iid_partition_p3_10c.json  non_iid_partition_p3_30c.json  non_iid_partition_p3_50c.json  train_fine.txt  val.txt
datasets/cityscapes/: city_iid_partitions.json  city_non_iid_partitions.json  city_partitions.json  iid_partition_final.json  iid_partition_final_30c.json  iid_partition_final_50c.json  iid_partition_new.json  iid_partitions.json  non_iid_partition_final.json  non_iid_partition_final_30c.json  non_iid_partition_final_50c.json  non_iid_partition_new.json  non_iid_partitions.json
datasets/idda/: dataset_domains.json  iid_partition_10c.json  iid_partition_30c.json  iid_partition_50c.json  non_iid_partition_10c.json  non_iid_partition_30c.json  non_iid_partition_50c.json  train_fine.txt
datasets/idda-fl/: dataset_domains.json  iid_partition_p1.json  iid_partition_p3_10c.json  non_iid_partition_p1.json  non_iid_partition_p3_10c.json  train_fine.txt  val.txt
fl-cityscapes-bisenetv2/: README.md  flwr-simulation-kaggle.ipynb  pyproject.toml
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/: __init__.py  client_app.py  server_app.py  task.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/: analysis_utils.py  batchnorm_statistics_analysis.ipynb  federated_model_evaluation.ipynb  federated_model_evaluation.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/batchnorm_analysis_results/: analysis_summary_report.txt  layer_level_bn_statistics.csv  partition_level_bn_statistics_aggregate.csv  partition_level_bn_statistics_per_round.csv  per_layer_variance_comparison_iid_non_iid.csv  per_partition_summary_statistics.csv
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/bn_layer_analysis/: __init__.py  bn_divergence_analysis.ipynb  bn_divergence_analysis.py  bn_divergence_utils.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/bn_stats_analysis/: batchnorm_statistics_analysis.ipynb
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/layer_dynamics/: __init__.py  layer_impact_by_branch.ipynb  layer_impact_by_branch.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/partition_heterogeneity/: heterogeneity_analysis.ipynb  non_iid_partitions.json
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/partition_heterogeneity_analysis/: clusters_global.pth  heterogeneity_analysis.ipynb
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/pixel-wise-iou/: evaluate_best_model.ipynb
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/results/: config_template.py  federated_model_evaluation.ipynb  learning_curves.ipynb
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/results_analysis/: federated_model_evaluation.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/analysis/weight_divergence/: __init__.py  branch_dynamics.py  model_similarity.py  performance_correlation.py  weight_divergence_analysis.ipynb  weight_divergence_analysis.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/configs/: pyproject_city_iid_partitions.toml  pyproject_city_non_iid_partitions.toml  pyproject_city_partitions.toml  pyproject_iid_partitions.toml  pyproject_iid_partitions_final.toml  pyproject_iid_partitions_new.toml  pyproject_non_iid_partitions.toml  pyproject_non_iid_partitions_final.toml  pyproject_non_iid_partitions_new.toml
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/data_preparation/: __init__.py  bdd100k_dataset.py  client_dataset.py  datasets.py  idd_dataset.py  random_pad_sampler.py  utils.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/models/: bisenetv2_train.py  deeplabv3p.py  deeplabv3p_train.py  model_utils.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/strategies/: CustomFedAvg.py  CustomFedAvgM.py  CustomFedEMA.py  CustomFedProx.py  CustomFedSiloBN.py  __init__.py
fl-cityscapes-bisenetv2/fl_cityscapes_bisenetv2/utils/: __init__.py  bn_utils.py  checkpoint_utils.py  clients_logging.py  model_utils.py  weight_utils.py
lib/: ohem_ce_loss.py
lib/clients/: cityscapes_client.py  cityscapes_client_dataset.py
lib/data/: cityscapes_cv2.py  get_dataloader.py  transform_cv2.py
lib/models/: bisenetv1.py  bisenetv2.py  norm.py  resnet.py
tools/: compute_stats.py  eval_metrics.py  evaluate.py  train_amp.py  train_amp_original.py  train_fl.py  train_single_gpu.py  utils.py
