# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-cityscapes-bisenetv2"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm",
    "opencv-python",
    "tabulate"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "moustafa"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fl_cityscapes_bisenetv2.server_app:app"
clientapp = "fl_cityscapes_bisenetv2.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# Server-side FL config
strategy-name = "FedAvg" # Options: FedAvg, FedAvgM, FedProx
num-server-rounds = 300
fraction-train = 0.5
fraction-evaluate = 0.0
server-device = "cuda"

# Server Loading Config
resume = true
pretrained-path = "./res/latest_model.pt"
rounds-trained = 190 # IMPORTANT Need Update on Resume

# Strategy-specific config
# FedAvgM config
server-momentum = 0.95
server-learning-rate = 1.0

# FedProx config
proximity-mu = 0.005

# Server evaluation config
eval-batch-size = 1
eval-interval = 1

# Client-side FL config
client-device = "cuda"

local-epochs = 1
batch-size = 4

# Dataset Paths
im-root = "./datasets/cityscapes"
client-data-partition = "./datasets/cityscapes/city_partitions.json"
server-data-partition = "./datasets/cityscapes/val.txt"

# Model Configs
num-classes = 19
lb-ignore = 255

lr = 9.124001815700379e-05 # IMPORTANT Need Update on Resume
lr-decay-factor = 0.9
lr-decay-rounds = 5
lr-schedule-file = "./res/lr_schedule.json"

weight-decay = 5e-4

num-aux-heads = 4

scales = "[0.25, 2.0]"
cropsize = "[512, 1024]"

# Results path
save-latest = "./res/latest_model.pt"
save-best = "./res/best_model.pt"
server-results-file = "./res/server_results.txt"

best-miou = 0.4516192617812664 # IMPORTANT Need Update on Resume
best-metric = "./res/best_metric.json"
latest-metric = "./res/latest_metric.json"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation-single-gpu"

# Local simulation federation with 18 virtual SuperNodes
[tool.flwr.federations.local-simulation-single-gpu]
options.num-supernodes = 18
options.backend.client-resources.num-cpus = 2 # Number of CPUs per Client
options.backend.client-resources.num-gpus = 1.0 # Fractional GPU allocation per Client
options.backend.init_args.num_cpus = 2 # Number of CPUs for the simulation controller 
options.backend.init_args.num_gpus = 1 # Number of GPUs for the simulation controller

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
