# FLWR TOML CONFIG FILE

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-cityscapes-bisenetv2"
version = "1.0.0"
description = ""
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "moustafa"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fl_cityscapes_bisenetv2.server_app:app"
clientapp = "fl_cityscapes_bisenetv2.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]

# Server-side FL configs
server-device = "cuda"
model-name = "BiSeNetV2" # Options: BiSeNetV2, DeepLabV3PlusLarge, DeepLabV3PlusSmall
is-pretrained = false # Whether to start training from a pretrained checkpoint (true/false)

# Dataset selection
# Options: cityscapes (19 classes), bdd100k (19 classes), iddav3 (26 classes)
# Changing this also requires updating num-classes and client/server data paths below.
dataset-name = "bdd100k"

strategy-name = "FedAvg" # Options: FedAvg, FedAvgM, FedProx, FedEMA
num-server-rounds = 2
fraction-train = 0.4
fraction-evaluate = 0.0

# Server-side Resume Training Configs
# IMPORTANT UPDATE ON RESUME
resume = false
pretrained-path = "./res/latest_model.pt"
rounds-trained = 0 

# Strategy-specific Configs
# FedAvgM / FedEMA Shared Configs
server-momentum = 0.5

# FedEMA Specific Configs
neg-entropy-weight = 0.001

# FedAvgM Specific Configs
server-learning-rate = 1.0

# FedProx Configs
proximity-mu = 0.005

# Server-side Evaluation Configs
eval-batch-size = 1
eval-interval = 1
server-data-partition = "./datasets/bdd100k/val.txt"

# Server-side Saving Configs
save-latest = "./res/latest_model.pt"
save-best = "./res/best_model.pt"
server-results-file = "./res/server_results.txt"
client-selection-log = "./res/client_selection_log.json"

best-miou = 0.0 # IMPORTANT UPDATE ON RESUME
best-metric = "./res/best_metric.json"
latest-metric = "./res/latest_metric.json"

# Client-side FL Configs
client-device = "cuda"

# Client Dataset Paths
im-root = "./datasets/bdd100k"
client-data-partition = "./datasets/bdd100k/iid_partition_10c.json"

# Model Training Hyper-Params
local-epochs = 3
batch-size = 2

lr = 1e-2 # IMPORTANT UPDATE ON RESUME
lr-decay-factor = 0.95
lr-decay-rounds = 10
lr-schedule-file = "./res/lr_schedule.json"

# Model Configs
# num-classes: cityscapes=19, bdd100k=19, iddav3=26
num-classes = 19
# lb-ignore: all supported datasets use 255
lb-ignore = 255

## Optimizer Configs
weight-decay = 5e-4
## Data Augmentation Configs
scales = "[0.25, 2.0]"
# cropsize per dataset:
#   cityscapes  → [512, 1024]  (1:2 ratio, half of native 1024×2048)
#   bdd100k     → [576, 1024]  (9:16 ratio, natural 0.8× of native 720×1280)
#   iddav3      → [576, 1024]  (9:16 ratio, natural 0.53× of native 1080×1920)
cropsize = "[576, 1024]"
## BiSeNetV2 Specific Configs
num-aux-heads = 4

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation-single-gpu"

# Local simulation federation with 18 virtual SuperNodes
[tool.flwr.federations.local-simulation-single-gpu]
options.backend.init_args.num_cpus = 2 # Number of CPUs for the simulation controller 
options.backend.init_args.num_gpus = 1 # Number of GPUs for the simulation controller
options.num-supernodes = 10 # Number of SuperNodes (i.e., Clients) in the Data Setup
options.backend.client-resources.num-cpus = 2 # Number of CPUs per Client
options.backend.client-resources.num-gpus = 1.0 # Fractional GPU allocation per Client
